# keeper

./: .editorconfig  LICENSE
.github/workflows/: main.yml
client/: .flake8  .gitignore  Makefile  README.md  binaries.spec  package.spec  pyproject.toml
client/assets/: AceArchiveKeeper.icns  keeper.desktop
client/packaging/: deb-control.in
client/src/acearchive_keeper/: __init__.py  api.py  artifact.py  backup.py  configure.py  gui.py  utils.py  worker.py
client/tools/: generate_spec.py  zip_bins.py
server/: Cargo.toml  wrangler.toml
server/migrations/: 0001_backups.sql
server/src/: api.rs  checksum.rs  lib.rs  validate.rs
