[project]
name = "acearchive-keeper"
version = "0.1.13"
description = "A tool for participants to host backups of Ace Archive"
classifiers = ["Private :: Do Not Upload"]
authors = [{"name" = "sbsparrow", "email" = "sbsparrow@proton.me"}]
requires-python = ">=3.13"
dependencies = [
    "pathvalidate>=3.3.1",
    "jcs>=0.2.1",
    "requests>=2.32.5",
]


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
ace-archive = "acearchive_keeper:main_cli"
