[project]
name = "acearchive-keeper"
version = "0.3.4"
description = "A tool for participants to host backups of Ace Archive"
classifiers = ["Private :: Do Not Upload"]
authors = [{"name" = "sbsparrow", "email" = "sbsparrow@proton.me"}]
requires-python = "~=3.13.0"
dependencies = [
    "pathvalidate>=3.3.1",
    "jcs>=0.2.1",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "pydantic>=2.12.5",
    "email-validator>=2.3.0",
    "aiohttp>=3.13.2",
    "aiofiles>=25.1.0",
]

[dependency-groups]

build = [
    "pyinstaller>=6.17.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
ace-archive = "acearchive_keeper:main_cli"

[tool.pyinstaller]
name = "Keeper"
entry = "src/acearchive_keeper/gui.py"
icon = "src/acearchive_keeper/resources/AceArchiveKeeper.icns"
bundle_identifier = "lgbt.acearchive.keeper"
