[package]
name = "keeper-worker"
version = "0.1.0"
edition = "2024"
authors = ["Frawley <frawley@duck.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.6", features = ["http"] }
axum = { version = "0.8", default-features = false, features = [
  "macros",
  "json",
] }
tower-service = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
